2009-10-28  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-disconnect): Don't reference connection.  Left
	over from last change.
	([test] arglist): Update expected results for slightly changed
	printer settings.
	([test] indentation): Install common-lisp-indent-function.

	* test.sh: Don't copy contribs. Slime should work without them.
	* swank-loader.lisp (setup): Compile contribs only if directory
	exists.

2009-10-28  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-format-display-message, slime-display-message)
	(slime-create-message-window): Deleted.  The trick with the
	pre-command-hook doesn't work in XEmacs 21.5.  So use the standard
	message function.  One day XEmacs will learn how to resize the
	minibuffer, but until then we have to live with one-line messages.

2009-10-27  Helmut Eller  <heller@common-lisp.net>

	* slime.el: Fix some docstrings and comments.

2009-10-26  Tobias C. Rittweiler <tcr@freebits.de>

	* test.sh: Shebang on bash, not just on sh.

2009-10-25  Tobias C. Rittweiler <tcr@freebits.de>

	Revert the reversed numbering of restarts in sldb.

	New command `sldb-cycle' ([tab]) in sldb will cycle between
	restart list and backtrace.

	Make sldb-invoke-restart-by-name case-insensitive.

	* slime.el (sldb-mode-map): Bind Tab to `sldb-cycle'.
	(sldb-restart-list-start-marker): New variable.
	(sldb-setup): Store marker in it.
	(sldb-cycle): New command to cycle between restart list and
	backtrace.
	(sldb-invoke-restart-by-name): Make completion case-insensitive.
	(sldb-insert-restarts): Revert to old behaviour.

2009-10-24  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-ccl.lisp (who-specializes): Do not signal an error if
	argument does not name a class.

2009-10-24  Tobias C. Rittweiler <tcr@freebits.de>

	* swank.lisp (xref): Deal with non-yet-interned names gracefully.

2009-10-24  Tobias C. Rittweiler <tcr@freebits.de>

	* slime.el (slime-search-property): Add parameter to get value at
	point propery changed.